--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -4,7 +4,7 @@ import "@/styles/global.css"
 import Hero from "@/components/Hero.astro"
 import Footer from "@/components/Footer.astro"
 import { Navbar } from "@/components/Navbar.jsx"
-import { Analytics } from '@vercel/analytics/astro'
+import Analytics from '@vercel/analytics/astro'
 
 const { pageTitle, title, description } = Astro.props;
 --- 
